toolchain/internal/core/analysis/testdata/errors/structure/multiple_input_blocks.vdl
// @expect: E701

rpc Users {
  proc GetUser {
    input {
      id: string
    }

    input {
      name: string
    }

    output {
      user: string
    }
  }
}
